--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ts-cdk-pipeline-app",
+  "description": "Projen template for creating a CDK project that uses codepipeline and Github for deployment",
   "repository": {
     "type": "git",
     "url": "https://git.us-west-2.github.source.3p.codecatalyst.aws/v1/DOC/ts-cdk-pipeline-app/ts-cdk-pipeline-app"
@@ -44,16 +45,29 @@
     "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0",
     "jest-junit": "^15",
-    "jsii": "~5.0.0",
+    "jsii": "~5.3.0",
     "jsii-diff": "^1.93.0",
     "jsii-docgen": "^10.3.3",
     "jsii-pacmak": "^1.93.0",
-    "jsii-rosetta": "~5.0.0",
+    "jsii-rosetta": "~5.3.0",
     "projen": "^0.78.6",
     "standard-version": "^9",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "peerDependencies": {
+    "constructs": "^10.3.0",
+    "projen": "^0.78.6"
+  },
+  "keywords": [
+    "aws",
+    "cdk",
+    "projen",
+    "typescript"
+  ],
+  "engines": {
+    "node": ">= 18.0.0"
   },
   "main": "lib/index.js",
   "license": "Apache-2.0",
