--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   },
   "peerDependencies": {
     "constructs": "^10.3.0",
+    "jsii": "^5.3.2",
     "projen": "^0.78.6"
   },
   "keywords": [
