--- a/package.json
+++ b/package.json
@@ -58,9 +58,14 @@
   },
   "peerDependencies": {
     "constructs": "^10.3.0",
-    "jsii": "^5.3.2",
     "projen": "^0.78.6"
   },
+  "dependencies": {
+    "jsii": "^5.3.2"
+  },
+  "bundledDependencies": [
+    "jsii"
+  ],
   "keywords": [
     "aws",
     "cdk",
