--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,10 +19,6 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.ref }}
           repository: ${{ github.event.pull_request.head.repo.full_name }}
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18.12.0
       - name: Install dependencies
         run: yarn install --check-files
       - name: build
@@ -91,7 +87,7 @@ jobs:
     steps:
       - uses: actions/setup-node@v3
         with:
-          node-version: 18.12.0
+          node-version: 18.x
       - name: Download build artifacts
         uses: actions/download-artifact@v3
         with:
