--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projen-pipelines",
+  "name": "ts-cdk-pipeline-apps",
   "repository": {
     "type": "git",
     "url": "https://github.com/tepapaatawhai/ts-cdk-pipeline-apps.git"
